<resources>
    <string name="app_name">TransareTest</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="not_registered">Not registered?</string>
    <string name="register">Register</string>
    <string name="repeat_password">Repeat password</string>
    <string name="confirm_password">Confirm_password</string>
    <string name="register_activity">Register</string>
    <string name="login">Login</string>
    <string name="login_register_activity">Login</string>
    <string name="confirm_password_registeractivity">Confirm password</string>
    <string name="facturaEditText">Factura</string>
    <string name="greutate_materie_prima_din_factura">Greutate Materie Prima din Factura</string>
    <string name="afis_den_TP">AI SELECTAT MATERIA PRIMA : </string>
    <string name="afis_den_CodInt_TP">Cod Int : </string>
    <string name="textview">TextView</string>
    <string name="Utilizator">utilizator</string>
    <string name="Parola">parola</string>
    <string name="nu_esti_inregistrat">Nu esti inregistrat?</string>
    <string name="inregistreaza_te">Inregistreaza-te</string>
    <string name="confirma_parola">confirma parola</string>
    <string name="inregistrare">Inregistrare</string>
    <string name="deja_inregistrat">Deja inregistrat?</string>
    <string name="cod_int">COD INT</string>
    <string name="Salvare">Salvare</string>
    <string name="tagRezultateTransare">1</string>
       <string name="TITLU_POPUP">VERIFICA REZULTATELE !!!</string>
    <string name="popup_GREUTATEFACTURA">GREUTATE INTRODUSA DIN FACTURA </string>
    <string name="POPUP_GREUTATEDINTRANSARE">GREUTATE REZULTATA DIN TRANSARE</string>
    <string name="INvalidare_ecran_final">MAI VERIFIC ODATA !</string>
    <string name="validare_rezultate">VALIDEZ REZULTATELE!</string>
    <string-array name="lista_selectie_transare">
        <item>Porc</item>
        <item>Vita</item>
        <item>Oaie</item>
        <item>Curcan</item>
        <!--        <item>Piept</item>-->
        <!--        <item>Cotlet</item>-->
        <!--        <item>Tocat</item>-->
    </string-array>

</resources>
