<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    tools:context=".LoginActivity"
    android:background="@color/colorGalben">

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="500dp"
        android:hint="@string/username"
        android:textSize="24sp"/>
    <EditText
        android:id="@+id/editext_password"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="500dp"
        android:hint="@string/password"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/button_login"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="500dp"
        android:hint="@string/login"
        android:background="#D215E04E"
        android:textSize="24sp"
        android:textStyle="bold"
        android:elevation="12dp"
     />

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginHorizontal="500dp"
        android:layout_marginLeft="270dp">

        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:hint="@string/not_registered"
            android:padding="10dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textview_register"
            android:layout_width="127dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:hint="@string/register"
            android:padding="10dp"
            android:textColor="@color/colorAccent"
            android:textSize="25sp"

            android:textStyle="bold" />


    </LinearLayout>


</LinearLayout>