<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:background="@color/colorGalben">


    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginTop="190dp"
        android:layout_marginLeft="500dp"
        android:hint="@string/username"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/editext_password"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginTop="270dp"
        android:layout_marginLeft="500dp"
        android:hint="@string/password"
        android:textSize="24sp"/>
    <EditText
        android:id="@+id/editext_confirm_password"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginTop="350dp"
        android:layout_marginLeft="500dp"
        android:hint="@string/confirm_password_registeractivity"
        android:textSize="24sp"/>
    <Button
        android:id="@+id/button_register"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginTop="430dp"
        android:layout_marginLeft="500dp"
        android:hint="@string/register_activity"
        android:background="#D215E04E"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_marginHorizontal="500dp"
        android:layout_marginStart="471dp"
        android:layout_marginTop="510dp">


        <TextView
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:gravity="center_vertical"
            android:hint="Already registered"
            android:padding="10dp"
            android:textSize="20sp"
            android:layout_marginLeft="30dp"/>
        <TextView
            android:id="@+id/textview_login"
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:gravity="center_vertical"
            android:hint="@string/login"
            android:padding="10dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            />

    </LinearLayout>


</RelativeLayout>