<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectieTransareProduseActivity"
    android:background="@color/colorFundalSelectie">>

    <TextView
        android:id="@+id/textViewAfisareDenumireTP"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="330dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="368dp"
        android:text="@string/textview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textViewAfisareCodIntTP"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/textViewAfisareCodIntTP"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="800dp"
        android:layout_marginBottom="368dp"
        android:text="@string/afis_den_CodInt_TP"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="368dp"
        android:text="@string/afis_den_TP"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textViewAfisareDenumireTP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="700dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="368dp"
        android:text="@string/cod_int"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textViewAfisareCodIntTP"
        app:layout_constraintStart_toEndOf="@+id/textViewAfisareDenumireTP"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerviewTP"
        android:layout_width="match_parent"
        android:layout_height="750dp"
        android:layout_marginTop="50dp"
        />
</RelativeLayout>